--- a/public/index.html
+++ b/public/index.html
@@ -71,37 +71,37 @@
       <h3>Índice</h3>
       <br><a href="#matters">Matters of Fact </a><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
       <br><br><a href="#casaERCP">Casa E.R.C.P.</a><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
-      <br><br><b>Casa J.B.R.C. </b><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
-      <br><br><b>Casa F.G. </b><!-- <br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>-->
-      <br><br><b>Cute-chitecture </b> <!-- <br><a href="#cute"> Arquitectura Póstuma</a> <br><a href="#cute2"> Cenotafios </a> <br><a href="#cute3"> Puentes </a> -->
+      <br><br><a href="#casaJBRC">Casa J.B.R.C. </a><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
+      <br><br><a href="#casaFG"> Casa F.G. </a><!-- <br><a href="#casaFG"> Texto </a> <br><a href="#casaFG2"> Dibujos </a> <br><a href="#casaFG3"> Fotografías</a>-->
+      <br><br><a href="#cute">Cute-chitecture </a> <!-- <br><a href="#cute"> Arquitectura Póstuma</a> <br><a href="#cute2"> Cenotafios </a> <br><a href="#cute3"> Puentes </a> -->
       <br><br><a href="#edificioSCW">Edificio S.C.W. </a> <!--<br> <a href="#edificioSCW"> Texto </a> <br> <a href="#edificioSCW2"> Dibujos </a> <br> <a href="#edificioSCW3"> Imágenes</a> -->
-      <br><br><b>Casa F.V. </b> <!--<br> <a href="#casaFV"> Texto </a> <br> <a href="#casaFV2"> Dibujos </a>-->
-      <br><br><b>Casa F.K.L. </b> <!--<br> <a href="#casaFKL">Texto</a> <br><a href="#casaFKL2"> Dibujos </a> <br><a href="#casaFKL3"> Fotografías</a> <br><a href="#casaFKL4"> Videos </a> -->
-      <br><br><b>Creciendo en Público </b> <!--<br> <a href="#creciendo"> Newsletter Errático</a>-->
-      <br><br><b>Erewhon </b> <!--<br> <a href="#erewhon"> Textos</a> <br><a href="#erewhon2"> Proposiciones</a> <br><a href="#erewhon3"> Dibujos </a> <br><a href="#erewhon4"> Imágenes</a>-->
-      <br><br><b>Personajismo</b> <!--<br> <a href="#personajismo">Del Arquitecto-Estrella al Arquitecto-Constelación</a>-->
-      <br><br><b>Muros, Puertas y Vanos </b><!--<br>  <a href="#MPV"> Hacia un Minimalismo Explosivo</a>-->
-      <br><br><b>MothershipTheatre </b> <!--<br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos </a>  -->
-      <br><br><b>Arquitectura sin Estado </b> <!--<br>  <a href="#sinEstado">  Albergues para Multitudes</a> <br><a href="#sinEstado2"> Multitudes en Movimiento </a> <br><a href="#sinEstado3"> Modelos </a> <br><a href="#sinEstado4"> Dibujos </a> -->
-      <br><br><b>Singular 00 </b><!--<br> <a href="#singular"> Proposición</a>-->
-      <br><br><b>Vanguardias o Nada </b> <!-- <br><a href="#vanguardia"> Manifiestos a Priori</a><br><a href="#vanguardia2"> Manifiestos Prospectivos </a>-->
-      <br><br><b>Ametralladora de Utopías </b><!-- <a href="#ametralladora"> <br> Texto</a><br><a href="#ametralladora2"> Técnicas</a>      -->
-      <br><br><b>Pasar la Noche Juntos </b><!-- <a href="#noche"> <br> Texto</a><br><a href="#noche2"> Entrevistas </a>-->
-      <br><br><b>Estados de la Arquitectura </b><!-- <a href="#estados"> <br> Seis Alegorías</a> <a href="#estados2"> Imágenes</a>-->
-      <br><br><b>Agrupación Militancia Arquitectura </b><!-- <a href="#militancia"> <br> Fanzine 2013</a> -->
-      <br><br><b>El Cuerpo Hueco de la Arquitectura </b><!-- <a href="#cuerpo"> <br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>-->
-      <br><br><b>Architecture Postponed </b><!-- <a href="#postponed"> <br> Texto</a><br><a href="#postponed2"> Architecture Museum </a>-->
-      <br><br><b>Tu Amorosa </b><!-- <a href="#amorosa"><br>Texto</a><br><a href="#amorosa2">Serla </a>-->
-      <br><br><b>Never Even </b><!--<br>  <a href="#never"> (Respeto por las Cosas como Son)</a>-->
-      <br><br><b>Hacia una Arquitectura sin Fin </b> <!-- <br><a href="#sinFin"> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>-->
-      <br><br><b>Un Memorial para la Revolución</b><!-- <br><a href="#revolucion">  No Man´s Land</a> <br><a href="#revolucion2"> Imágenes </a>-->
-      <br><br><b>En el Muro </b><!-- <a href="#muro"><br>Texto</a> <br><a href="#muro2"> Dibujos </a> <br><a href="#muro3"> Imágenes</a>-->
-      <br><br><b>Parque de las Ciencias</b><!--<br> <a href="#ciencias">Un Océano de Columnas </a> <br><a href="#ciencias2"> Dibujos</a> <br><a href="#ciencias3"> Imágenes</a>-->
-      <br><br><b>Laberinto </b><!-- <a href="#laberinto"> <br>Texto</a> <br><a href="#laberinto2"> Dibujos</a> <br><a href="#laberinto3"> Imágenes</a>-->
-      <br><br><b>Geometrías Invisibles </b><!-- <a href="#invisibles"><br>Texto</a> <br><a href="#invisibles2"> Imágenes</a> -->
-      <br><br><b>Hoy el Mundo </b><!-- <br> <a href="#mundo"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>-->
-      <br><br><b>Estudio </b><!--  <a href="#estudio"><br>Texto</a> <br><a href="#estudio2"> Oficina </a>-->
-      <br><br><b>Sitio Web</b><!-- <a href="#web"><br>Tapiz</a>-->
+      <br><br><a href="#casaFV">Casa F.V. </a> <!--<br> <a href="#casaFV"> Texto </a> <br> <a href="#casaFV2"> Dibujos </a>-->
+      <br><br><a href="#casaFKL">Casa F.K.L. </a> <!--<br> <a href="#casaFKL">Texto</a> <br><a href="#casaFKL2"> Dibujos </a> <br><a href="#casaFKL3"> Fotografías</a> <br><a href="#casaFKL4"> Videos </a> -->
+      <br><br><a href="#creciendo">Creciendo en Público </a> <!--<br> <a href="#creciendo"> Newsletter Errático</a>-->
+      <br><br><a href="#erewhon">Erewhon </a> <!--<br> <a href="#erewhon"> Textos</a> <br><a href="#erewhon2"> Proposiciones</a> <br><a href="#erewhon3"> Dibujos </a> <br><a href="#erewhon4"> Imágenes</a>-->
+      <br><br><a href="#personajismo">Personajismo</a> <!--<br> <a href="#personajismo">Del Arquitecto-Estrella al Arquitecto-Constelación</a>-->
+      <br><br><a href="#MPV">Muros, Puertas y Vanos </a><!--<br>  <a href="#MPV"> Hacia un Minimalismo Explosivo</a>-->
+      <br><br><a href="#mothership">MothershipTheatre </a> <!--<br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos </a>  -->
+      <br><br><a href="#sinEstado">Arquitectura sin Estado </a> <!--<br>  <a href="#sinEstado">  Albergues para Multitudes</a> <br><a href="#sinEstado2"> Multitudes en Movimiento </a> <br><a href="#sinEstado3"> Modelos </a> <br><a href="#sinEstado4"> Dibujos </a> -->
+      <br><br><a href="#singular">Singular 00 </a><!--<br> <a href="#singular"> Proposición</a>-->
+      <br><br><a href="#vanguardia">Vanguardias o Nada </a> <!-- <br><a href="#vanguardia"> Manifiestos a Priori</a><br><a href="#vanguardia2"> Manifiestos Prospectivos </a>-->
+      <br><br><a href="#ametralladora">Ametralladora de Utopías </a><!-- <a href="#ametralladora"> <br> Texto</a><br><a href="#ametralladora2"> Técnicas</a>      -->
+      <br><br><a href="#noche">Pasar la Noche Juntos </a><!-- <a href="#noche"> <br> Texto</a><br><a href="#noche2"> Entrevistas </a>-->
+      <br><br><a href="#estados">Estados de la Arquitectura </a><!-- <a href="#estados"> <br> Seis Alegorías</a> <a href="#estados2"> Imágenes</a>-->
+      <br><br><a href="#militancia">Agrupación Militancia Arquitectura </a><!-- <a href="#militancia"> <br> Fanzine 2013</a> -->
+      <br><br><a href="#cuerpo">El Cuerpo Hueco de la Arquitectura </a><!-- <a href="#cuerpo"> <br> Circular #01. Arquitectura, Cuerpo y Cosmos</a>-->
+      <br><br><a href="#postponed">Architecture Postponed </a><!-- <a href="#postponed"> <br> Texto</a><br><a href="#postponed2"> Architecture Museum </a>-->
+      <br><br><a href="#amorosa">Tu Amorosa </a><!-- <a href="#amorosa"><br>Texto</a><br><a href="#amorosa2">Serla </a>-->
+      <br><br><a href="#never">Never Even </a><!--<br>  <a href="#never"> (Respeto por las Cosas como Son)</a>-->
+      <br><br><a href="#sinFin">Hacia una Arquitectura sin Fin </a> <!-- <br><a href="#sinFin"> Circular #02. Arquitectura, Arquitectura y Arquitectura</a>-->
+      <br><br><a href="#revolucion">Un Memorial para la Revolución</a><!-- <br><a href="#revolucion">  No Man´s Land</a> <br><a href="#revolucion2"> Imágenes </a>-->
+      <br><br><a href="#muro">En el Muro </a><!-- <a href="#muro"><br>Texto</a> <br><a href="#muro2"> Dibujos </a> <br><a href="#muro3"> Imágenes</a>-->
+      <br><br><a href="#ciencias">Parque de las Ciencias</a><!--<br> <a href="#ciencias">Un Océano de Columnas </a> <br><a href="#ciencias2"> Dibujos</a> <br><a href="#ciencias3"> Imágenes</a>-->
+      <br><br><a href="#laberinto">Laberinto </a><!-- <a href="#laberinto"> <br>Texto</a> <br><a href="#laberinto2"> Dibujos</a> <br><a href="#laberinto3"> Imágenes</a>-->
+      <br><br><a href="#invisibles">Geometrías Invisibles </a><!-- <a href="#invisibles"><br>Texto</a> <br><a href="#invisibles2"> Imágenes</a> -->
+      <br><br><a href="#mundo">Hoy el Mundo </a><!-- <br> <a href="#mundo"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>-->
+      <br><br><a href="#estudio">Estudio </a><!--  <a href="#estudio"><br>Texto</a> <br><a href="#estudio2"> Oficina </a>-->
+      <br><br><a href="#web">Sitio Web</a><!-- <a href="#web"><br>Tapiz</a>-->
     </div>
 
     <div class="column" id="gap2B" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -182,7 +182,6 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <h3 style="color:white;">.</h3>
       <!--<p>Fotografías x F.S.</p>-->
       <br>
-      <br>
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/02.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/03.jpg" alt="Image 1">
@@ -253,7 +252,7 @@ Maecenas nec lobortis nunc.
     
   <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="casaJBRC"></span>
-      <h3>Casa J.B.R.C.</h3>
+      <!-- <h3>Casa J.B.R.C.</h3> -->
       <p>Texto</p>
       <br>
       <p>Una pareja de artistas nos contacta para “acondicionar” una propiedad que están pensando comprar. Al salir de la visita les decimos “la casa tiene mucho ruido, hace falta mucha crueldad. Como decía L. Lamborghini sobre la palabra amor, hay que retorcerla”. El proceso de reconstrucción de la casa empezó siendo una “lavada de cara”, siguió como una “refacción”, se volvió luego una “reforma integral” y culminó en “una casa nueva”. La estrategia fue simple, hacer subir desde el fondo lo que la casa ya era: una casa de 3 metros de ancho por un largo de 18 metros, desarrollada en vertical en tres niveles y varios desniveles, con el potencial de volverse un pequeño buque largo, esbelto y alto. Se demolió todo el ruido estilístico e innecesario: molduras, falsas vigas de madera, nichos, muros que sectorizaban los espacios según clichés absurdos, equipamiento no pensado para ser utilizado sino para representar un gusto poco refinado. Pero también se le terminó de dar forma a… Aperturas para dar luz…
